--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,4 +11,7 @@
     <string name="disconnecting">Rozłączanie</string>
     <string name="disconnected">Rozłączono</string>
     <string name="connecting">Łączenie</string>
+    <string name="connectingProgress">Łączenie z urządzeniem</string>
+    <string name="please_wait">Proszę czekać</string>
+    <string name="connect_to_device">Połącz z urządzeniem</string>
 </resources>
