--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,4 +14,6 @@
     <string name="connectingProgress">Łączenie z urządzeniem</string>
     <string name="please_wait">Proszę czekać</string>
     <string name="connect_to_device">Połącz z urządzeniem</string>
+    <string name="paired_devices">Sparowane urządzenia</string>
+    <string name="finding_devices">Szukanie urządzeń...</string>
 </resources>
