--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -27,4 +27,5 @@
     <string name="change_the_name">Zmień nazwę</string>
     <string name="you_must_enter_the_name">Musisz wprowadzić nową nazwę</string>
     <string name="deleted">Usunięto</string>
+    <string name="connect_first">Połącz się najpierw z urządzeniem</string>
 </resources>
